8209162: Page size selection does not always select optimal page size

Reviewed-by: sjohanss, tschatzl